--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Welcome to SRCH</h1>
-    <form action="/" method="POST">
+    <form action="{{ url_for('search') }}" method="get">
         <label for="srch_url">Search URL:</label>
         <input type="text" id="srch_url" name="srch_url">
         <br>
