--- a/templates/results.html
+++ b/templates/results.html
@@ -33,6 +33,6 @@
     {% else %}
         <p>No results found!</p>
     {% endif %}
-    <a href="/">Back to Search</a>
+    <a href="{{ url_for('index') }}">Back to Search</a>
 </body>
 </html>
