--- a/templates/index.html
+++ b/templates/index.html
@@ -7,14 +7,7 @@
 </head>
 <body>
     <h1>Welcome to SRCH</h1>
-    <form action="{{ url_for('search') }}" method="get">
-        <label for="srch_url">Search URL:</label>
-        <input type="text" id="srch_url" name="srch_url">
-        <br>
-        <label for="srch_text">Search Text:</label>
-        <input type="text" id="srch_text" name="srch_text" required>
-        <br>
-        <button type="submit">Search</button>
-    </form>
+    <p>Search is now hardcoded and will use the default values.</p>
+    <a href="/search">Go to Search Results</a>
 </body>
 </html>
